# capstone

./: .gitignore  main.py  missing_data_check.csv  pecan_data.ipynb  pyproject.toml
data/pecan_street/1_min/: link.txt
data/pecan_street/docs/: peca_columns.csv
eda/: eda__pecan__nyc.ipynb  eda__resstock_1.ipynb  ega__pecan__combined.ipynb
experiments/exploratory/: first_steps.ipynb
scripts/: stage_data.py
src/: example.py  omar_50.py
src/EDA/: 88626-0.parquet
src/apps/: app.py  dashboard.py  energy-dashboard.py  kafkadriver.py  live-pv-dashboard.py  live-pv-dashboard2.py  live-pv-dashboard3.py  live-pv-dashboard4.py  live-pv-dashboard5.py  live-pv-dashboard6.py  pgAPIpecan.py  pgAPIresstock.py  pgdriver.py  post_req.py  rejsondriver.py  smartmeter_sim.py  solcast.py  startworkers.py  styles.css  uszipcode.py  workerpool.py
src/apps/infra/: startkafka.txt  startpg.txt  startredis.txt
src/apps/kafka_demo/: cmod.py  dmod.py  kafkadriver.py  p.py
src/apps/pecan/: 1222.csv  1240.csv  1417.csv  142.csv  1450.csv  1524.csv  1642.csv  1731.csv  203.csv  2096.csv  2318.csv  2335.csv  2358.csv  2361.csv  2606.csv  27.csv  2818.csv  3000.csv  3039.csv  3456.csv  3488.csv  3517.csv  3538.csv  3687.csv  3700.csv  3864.csv  387.csv  3996.csv  4031.csv  4283.csv  4373.csv  4495.csv  (+37 more)
src/dataloader/: loader.py
src/etl/: bldg_id_50.csv  data_pipeline.ipynb  file_assignment.csv  omar_pipeline.py  random_assign_file.ipynb
src/examples/: ex__athena.ipynb  ex__base.ipynb  ex__local.py
src/resloader/: api.py  athena.py  base.py  utils.py
src/restorch/: data.py
(+6 files in other folders)
