[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
plotly = "^5.18.0"
notebook = "^7.0.7"
h5py = "^3.10.0"
pyarrow = "^15.0.0"
fastparquet = "^2023.10.1"
geopy = "^2.4.1"
tabulate = "^0.9.0"
plotly-geo = "^1.0.0"
missingno = "^0.5.2"
boto3 = "^1.34.37"
scikit-learn = "^1.4.0"
torch = "^2.2.0"
torchvision = "^0.17.0"
torchaudio = "^2.2.0"
pyspark = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
